2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove xstrdup.c.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* xstrdup.c: Remove this obsolete file.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (fnmatch, fnmatch-posix): Improve comment.
	* fnmatch.c, fnmatch_loop.c: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move exit.h to its own section.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Remove "savecwd.c", "savecwd.h", "xgetwd.c" from project.
	Add "save-cwd.c", "save-cwd.h", "xgetcwd.c", "xgetcwd.h" to project.
	* libcvs.dep: Regenerated for "libcvs.dsp" change.
	* libcvs.mak: Regenerated for "libcvs.dsp" change.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* basename.c, dirname.c, dirname.h, stripslash.c: Updated from GNULIB.
	* system.h: s/FILESYSTEM_PREFIX_LEN/FILE_SYSTEM_PREFIX_LEN/.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.gnulib: New file.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add xalloc-die.c.
	* xalloc-die.c: New file from GNULIB.
	* xalloc.h, xmalloc.c: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move gettext.h to its own section.
	* gettext.h, vasnprintf.c, vasnprintf.h: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* savecwd.c: Rename to...
	* save-cwd.c: ...this and replace with the newest version from GNULIB.
	* savecwd.h: Ditto, but to...
	* save-cwd.h: ...this name.
	* Makefile.am (libcvs_a_SOURCES): Remove savecwd.[ch].  Add save-cwd.h
	& save-cwd.c in their own section.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove xgetwd.c, add xgetcwd.h &
	xgetcwd.c in their own section.
	* xgetwd.c: Removed.
	* xgetcwd.h, xgetcwd.c: New files imported from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>
