@@ -9,8 +9,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gettext mkstemp pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.8 gnits
 
@@ -69,6 +69,7 @@ MOSTLYCLEANFILES += fnmatch.h fnmatch.h-t
 
 
 libgnu_a_SOURCES += gettext.h
+
 
 libgnu_a_SOURCES += pathmax.h
 
