@@ -44,12 +44,8 @@
 #endif
 
 #include <stddef.h>
-
-#if STDC_HEADERS || _LIBC
-# include <string.h>
-#endif
-
 #include <stdlib.h>
+#include <string.h>
 
 #if HAVE_FCNTL_H || _LIBC
 # include <fcntl.h>
